--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,12 @@
   
   <app-root>
    
-    
+    <div id="smart-button-container">
+      <div style="text-align: center;">
+        <div id="paypal-button-container"></div>
+      </div>
+    </div>
+  
   </app-root>
 </body>
 </html>
