donation btn working need top add user link creation in settings

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,6 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <script nl_pos="bl" src="./assets/hangasha/nagishli.js"></script>
-  <script>
-    nl_pos = "bl";
-    nl_dir = "./src/assets/hangasha/";
-    nl_contact = "n:יבנגי ברשדסקי|p:0526767682|u:jayber1+d:gmail.com";
-    </script> -->
     <script src="./assets/hangasha-beta/nagishli_v3_beta/nagishli_beta.js?v=3.0b" charset="utf-8" defer></script>
     <script>
       nagishli_config = {
@@ -21,12 +15,13 @@
         language: "he"
       };
       </script>
+      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8" async></script>
+
 </head>
 <body>
-  
-  
+
   <app-root>
-   
+    
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
